Fix deprecated warnings
Replaced "new Integer(<int-value>)" by "Integer.valueOf(<int-value>)"
and "prepartionClass.newInstance()" by
"prepartionClass.getDeclaredConstructor().newInstance()".